Add GPT-5 model

--- a/chatgpt_nuclear_imaging.ipynb
+++ b/chatgpt_nuclear_imaging.ipynb
@@ -53,7 +53,8 @@
       "cell_type": "code",
       "source": [
         "API_KEY = os.environ[\"OPENAI_API_KEY\"]\n",
-        "MODEL = \"gpt-4.5-preview\"\n",
+        "MODEL = \"gpt-5\"\n",
+        "#MODEL = \"gpt-4.5-preview\"\n",
         "#MODEL = \"gpt-4.1\"\n",
         "#MODEL = \"gpt-4-turbo-2024-04-09\"\n",
         "#MODEL = \"o1\"\n",
